les 5 proberen maar niet gelukt. Verder met een nieuw bestand. Die werkt yay

--- a/HoopMelissaLes4/HoopMelissaLes4.vcxproj.filters
+++ b/HoopMelissaLes4/HoopMelissaLes4.vcxproj.filters
@@ -22,6 +22,9 @@
 		<ClCompile Include="src\Particle.cpp">
 			<Filter>src</Filter>
 		</ClCompile>
+		<ClCompile Include="src\Reaper.cpp">
+			<Filter>src</Filter>
+		</ClCompile>
 	</ItemGroup>
 	<ItemGroup>
 		<Filter Include="src">
@@ -42,6 +45,9 @@
 			<Filter>src</Filter>
 		</ClInclude>
 		<ClInclude Include="src\Particle.h">
+			<Filter>src</Filter>
+		</ClInclude>
+		<ClInclude Include="src\Reaper.h">
 			<Filter>src</Filter>
 		</ClInclude>
 	</ItemGroup>
